<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>KalafcheBackend</groupId>
	<artifactId>KalafcheBackend</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>war</packaging>
	<name>KalafcheBackend</name>

  <repositories>
    <repository>
      <id>firstrepo</id>
      <name>repo</name>
      <url>C:\Zahari\.m2</url>
    </repository>
  </repositories>

    <properties>
        <spring.version>4.3.9.RELEASE</spring.version>
        <spring.security.version>4.0.1.RELEASE</spring.security.version>
        <log4j.version>2.3</log4j.version>
        <jackson.version>2.9.4</jackson.version>
        <commonslang.version>2.6</commonslang.version>

        <environment.dir.source>src/main/resources/environment</environment.dir.source>
        <environment.file>environment.properties</environment.file>
        <environment.file.local>environment.local.properties</environment.file.local>
        <environment.file.dev>environment.dev.properties</environment.file.dev>
        <environment.file.fvt>environment.fvt.properties</environment.file.fvt>
        <environment.file.uat>environment.uat.properties</environment.file.uat>
        <environment.file.staging>environment.staging.properties</environment.file.staging>
        <environment.file.prod>environment.prod.properties</environment.file.prod>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-web</artifactId>
			<version>${spring.security.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-config</artifactId>
			<version>${spring.security.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.3.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.5</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
		<dependency>
		    <groupId>mysql</groupId>
		    <artifactId>mysql-connector-java</artifactId>
		    <version>8.0.30</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.poi</groupId>
		    <artifactId>poi</artifactId>
		    <version>3.17</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.poi</groupId>
		    <artifactId>poi-ooxml</artifactId>
		    <version>3.17</version>
		</dependency>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>24.0-jre</version>
		</dependency>

		<dependency>
		    <groupId>com.itextpdf</groupId>
		    <artifactId>itextpdf</artifactId>
		    <version>5.5.13</version>
		</dependency>

		<!-- Google Drive API -->
		<dependency>
		    <groupId>com.google.api-client</groupId>
		    <artifactId>google-api-client</artifactId>
		    <version>1.25.0</version>
		</dependency>
		<dependency>
		    <groupId>com.google.apis</groupId>
		    <artifactId>google-api-services-drive</artifactId>
		    <version>v3-rev136-1.25.0</version>
		</dependency>
		<dependency>
		    <groupId>com.google.oauth-client</groupId>
		    <artifactId>google-oauth-client-jetty</artifactId>
		    <version>1.25.0</version>
		</dependency>
		<dependency>
		    <groupId>io.github.openfeign</groupId>
		    <artifactId>feign-core</artifactId>
		    <version>13.1</version>
		</dependency>


		<!-- Tests -->
		<dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.12</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.mockito</groupId>
		    <artifactId>mockito-core</artifactId>
		    <version>2.10.0</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>javax.validation</groupId>
		    <artifactId>validation-api</artifactId>
		    <version>2.0.1.Final</version>
		</dependency>
	    <dependency>
	        <groupId>org.projectlombok</groupId>
	        <artifactId>lombok</artifactId>
	        <version>1.18.28</version>
	        <scope>provided</scope>
	    </dependency>
		<dependency>
		    <groupId>io.github.openfeign</groupId>
		    <artifactId>feign-jackson</artifactId>
		    <version>9.3.1</version>
		</dependency>
	</dependencies>

	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<plugins>
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-war-plugin</artifactId>
			    <version>3.3.2</version>
			</plugin>
			<plugin>
			      <groupId>org.apache.maven.plugins</groupId>
			      <artifactId>maven-compiler-plugin</artifactId>
			      <version>3.10.1</version>
					<configuration>
			        	<encoding>UTF-8</encoding>
			      	</configuration>
			</plugin>
		</plugins>
	</build>
</project>
